[package]
name = "scarab"
version = "0.1.0"
description = "SCARAB — Satellite Constellation Autonomous Relative-motion Analysis & Budgeting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/huqhesy/scarab"
keywords = ["astrodynamics", "constellation", "satellite", "stationkeeping", "orbit"]
categories = ["science", "aerospace", "spacecraft", "maneuver", "navigation", "control", "analysis", "budgeting"]

[lib]
name = "scarab"
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.33"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
python = ["pyo3", "numpy"]

[profile.release]
opt-level = 3
lto = true
