[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "scarab"
version = "0.1.0"
description = "SCARAB — Satellite Constellation Autonomous Relative-motion Analysis & Budgeting"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "jupyter",
    "plotly",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "scarab.scarab"
